--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -476,17 +476,17 @@
                     <p class='section_content_header_p_right'></p>
                 </div>
                 <div class='section_content_body'>
-<!--                    <p class='text has-animation'>-->
-<!--                        Компания была образована в 2019 году как центр компетенций цифрового здравоохранения. Сегодня Цифромед является головной компанией-->
-<!--                    </p>-->
-<!--                    <span class="bold">Кластера «Медицина» ПАО Ростелеком.</span>-->
-<!--                    <p class='section_content_body_p has-animation animation-ltr'>-->
-<!--                        Наша компания разделена-->
-<!--                    </p>-->
-<!--                    <span class="bold">на Бизнес-единицы</span>-->
-<!--                    <p class='text has-animation'>-->
-<!--                        - функциональные подразделения, отвечающие за реализацию проектов в своих зонах ответственности.-->
-<!--                    </p>-->
+                    <p class='paragraph has-animation'>
+                        Компания была образована в 2019 году как центр компетенций цифрового здравоохранения. Сегодня Цифромед является головной компанией
+                        <span class="bold">Кластера «Медицина»</span>
+                        ПАО Ростелеком.
+                    </p>
+
+                    <p class='paragraph has-animation'>
+                        Наша компания разделена
+                        <span class="bold">на Бизнес-единицы</span>
+                        - функциональные подразделения, отвечающие за реализацию проектов в своих зонах ответственности.
+                    </p>
                     <div class="content__welcome-section_1_0">
                         <div class="item__welcome-section_1_0">
                             <p>
@@ -530,9 +530,37 @@
                             </p>
                         </div>
                     </div>
+                    <p class='paragraph-24 has-animation'>
+                        Подробно со структурой компании и топ-менеджерами ты можешь познакомиться на
+                        <span class="link">корпоративном портале</span>
+                        .
+                    </p>
+
+                    <p class='paragraph-30 bold has-animation'>
+                        Также в структуре Кластера есть несколько продуктовых компаний
+                        <p class="paragraph-22">(мы их называем ДЗО – дочернее зависимое общество)</p>
+                        .
+                    </p>
+                    <div class="footer__welcome-section_1_0">
+                        <div class="item_footer__welcome-section_1_0">
+                            <img  src="./this/img/sections/1/0/rtk_radiology.svg"/>
+                        </div>
+                        <div class="item_footer__welcome-section_1_0">
+                            <img  src="./this/img/sections/1/0/rt_mis.svg"/>
+                        </div>
+                        <div class="item_footer__welcome-section_1_0">
+                            <img  src="./this/img/sections/1/0/rt_kis.svg"/>
+                        </div>
+                        <div class="item_footer__welcome-section_1_0">
+                            <img  src="./this/img/sections/1/0/rt_doctis.svg"/>
+                        </div>
+                        <div class="item_footer__welcome-section_1_0">
+                            <img  src="./this/img/sections/1/0/rtk_element.svg"/>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class='section_content_item_img_1_0'></div>
+            <div class="section_content_item_img_1_0"></div>
         </div>
     </welcome-section>
 
