--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -572,72 +572,16 @@
             slot="welcome-section_1_0"
     >
         <div class='section_content'>
-            <div class='hasAnimation section_content_item_2'>
+            <div class='hasAnimation section_content_item_0'>
                 <div class='section_content_header'>
                     <p class='section_content_header_p_left'></p>
                     <p class='section_content_header_p'>Единая цифровая платформа</p>
                     <p class='section_content_header_p_right'></p>
                 </div>
-                <div class='section_content_body section_content_body_2'>
-                    <div class='section_content_body_item_2'>
-                        <div class='section_content_card'>
-                            <div class='section_content_card_top'>
-                                <div class='section_content_img'>
-                                    <img src="./this/img/sections/1/icons/00.png"/>
-                                </div>
-                                <div class='section_content_text section_content_text_1'>
-                                    ФМБА России
-                                </div>
-                            </div>
-                            <div class='section_content_card_bottom'>
-                                Автоматизацией крупнейшей сети государственных клиник ФМБА России
-                            </div>
-                        </div>
-                        <div class='section_content_card'>
-                            <div class='section_content_card_top section_2'>
-                                <div class='section_content_card_top section_2_height'>
-                                    <img src="./this/img/sections/1/icons/01.png"/>
-                                </div>
-                                <div class='section_content_text_2'>
-                                    <p class='section_content_text_2_0'>Федеральный фонд</p>
-                                    <p class='section_content_text_2_1'>Обязательного медицинского страхования</p>
-                                </div>
-                            </div>
-                            <div class='section_content_card_bottom'>
-                                Созданием и развитием подсистем и компонентов ГИС ОМС
-                            </div>
-                        </div>
-                        <div class='section_content_card'>
-                            <div class='section_content_card_top'>
-                                <img src="./this/img/sections/1/icons/02.svg"/>
-                            </div>
-                            <div class='section_content_card_bottom'>
-                                Развитием кабинета Здоровье на Портале госуслуг совместно с Минцифрой России
-                            </div>
-                        </div>
-                        <div class='section_content_card'>
-                            <div class='section_content_card_top_2'>
-                                <div class='section_content_card_top width-icon'>
-                                    <img src="./this/img/sections/1/icons/04.svg"/>
-                                </div>
-                                <div class='section_content_text section_content_text_2_2 color-white'>
-                                    ЕГИСЗ
-                                </div>
-                            </div>
-                            <div class='section_content_card_bottom'>
-                                Развитием архитектуры и технологий подсистем ЕГИСЗ для Минздрава России
-                            </div>
-                        </div>
-
-                        <div class='section_content_card'>
-                            <div class='section_content_card_top_3'>
-                                <p class='section_content_card_top_logo_3'>ЕЦК</p>
-                            </div>
-                            <div class='section_content_card_bottom'>
-                                Развитием Единого цифрового контура на базе продуктов дочерних копаний
-                            </div>
-                        </div>
-                    </div>
+                <div class='section_content_body--center'>
+                    <p class='section_content_body_p  notFound has-animation'>
+                        РАЗДЕЛ в разработке
+                    </p>
                 </div>
             </div>
             <div class='section_content_item_img_1_1'></div>
@@ -651,21 +595,78 @@
             slot="welcome-section_1_0"
     >
         <div class='section_content'>
-            <div class='hasAnimation section_content_item_0'>
+            <div class='hasAnimation section_content_item_2'>
                 <div class='section_content_header'>
                     <p class='section_content_header_p_left'></p>
                     <p class='section_content_header_p'>наши проекты</p>
                     <p class='section_content_header_p_right'></p>
                 </div>
-                <div class='section_content_body'>
-                    <p class='section_content_body_p  notFound has-animation'>
-                        РАЗДЕЛ в разработке
-                    </p>
+                <div class='section_content_body--center'>
+                    <div class='class="content__welcome-section_1_2'>
+                        <div class='section_content_card'>
+                            <div class='section_content_card_top'>
+                                <div class='section_content_img'>
+                                    <img src="./this/img/sections/1/icons/00.png"/>
+                                </div>
+                                <div class='section_content_text'>
+                                    ФМБА России
+                                </div>
+                            </div>
+                            <div style="display: none" class='section_content_card_bottom'>
+                                Автоматизацией крупнейшей сети государственных клиник ФМБА России
+                            </div>
+                        </div>
+                        <div class='section_content_card'>
+                            <div class='section_content_card_top section_2'>
+                                <div class='section_content_card_top section_2_height'>
+                                    <img src="./this/img/sections/1/icons/01.png"/>
+                                </div>
+                                <div class='section_content_text_2'>
+                                    <p class='section_content_text_2_0'>Федеральный фонд</p>
+                                    <p class='section_content_text_2_1'>Обязательного медицинского страхования</p>
+                                </div>
+                            </div>
+                            <div style="display: none" class='section_content_card_bottom'>
+                                Созданием и развитием подсистем и компонентов ГИС ОМС
+                            </div>
+                        </div>
+                        <div class='section_content_card'>
+                            <div class='section_content_card_top'>
+                                <div class='section_content_img'>
+                                    <img src="./this/img/sections/1/icons/04.svg"/>
+                                </div>
+                                <div class='section_content_text'>
+                                    ЕГИСЗ
+                                </div>
+                            </div>
+                            <div style="display: none" class='section_content_card_bottom'>
+                                Автоматизацией крупнейшей сети государственных клиник ФМБА России
+                            </div>
+                        </div>
+                        <div class='section_content_card'>
+                            <div class='section_content_card_top'>
+                                <img src="./this/img/sections/1/icons/02.svg"/>
+                            </div>
+                            <div style="display: none" class='section_content_card_bottom'>
+                                Развитием кабинета Здоровье на Портале госуслуг совместно с Минцифрой России
+                            </div>
+                        </div>
+
+                        <div class='section_content_card'>
+                            <div class='section_content_card_top_3'>
+                                <p class='section_content_card_top_logo_3'>ЕЦК</p>
+                            </div>
+                            <div style="display: none"  class='section_content_card_bottom'>
+                                Развитием Единого цифрового контура на базе продуктов дочерних копаний
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class='section_content_item_img_1_2'></div>
         </div>
     </welcome-section>
+
 
     <welcome-section
             data-services-path="welcomebook"
