--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -683,7 +683,6 @@
                 </div>
                 <div class='section_content_body--center'>
                     <div class='content__welcome-section_1_3'>
-
                         <div class='card__welcome-section_1_3'>
                             <div class='section_content_card_top_03'>
                                 <img src="./this/img/sections/1/1/01.svg"/>
@@ -742,8 +741,6 @@
                                 </p>
                             </div>
                         </div>
-
-
                     </div>
                 </div>
             </div>
@@ -859,9 +856,86 @@
                     <p class='section_content_header_p_right'></p>
                 </div>
                 <div class='section_content_body'>
-                    <p class='section_content_body_p  notFound has-animation'>
-                        РАЗДЕЛ в разработке
-                    </p>
+                    <div class='section_content_body--center--padding_0'>
+                        <div class='content__welcome-section_2_0'>
+                            <div class='card__welcome-section_2_0'>
+                                <div class='image__welcome-section_2_0'>
+                                    <img src="./this/img/sections/2/0/1c.svg"/>
+                                </div>
+                                <div class='description__welcome-section_2_0'>
+                                    <h4>
+                                        1С:Документооборот
+                                    </h4>
+                                    <div class="paragraph__welcome-section_2_0">
+                                        <p class="paragraph--left">
+                                            В компании внедрена Система внутреннего документооборота на базе 1С:Документооборот. Регламенты на бизнес-процессы, инструкции пользователей по работе с функционалом системы опубликованы на
+                                            <span class="link">
+                                                корпоративном портале
+                                            </span>
+                                            .
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class='card__welcome-section_2_0'>
+                                <div class='image__welcome-section_2_0'>
+                                    <img src="./this/img/sections/2/0/1c.svg"/>
+                                </div>
+                                <div class='description__welcome-section_2_0'>
+                                    <h4>
+                                        1С:Документооборот
+                                    </h4>
+                                    <div class="paragraph__welcome-section_2_0">
+                                        <p class="paragraph--left">
+                                            В компании внедрена Система внутреннего документооборота на базе 1С:Документооборот. Регламенты на бизнес-процессы, инструкции пользователей по работе с функционалом системы опубликованы на
+                                            <span class="link">
+                                                корпоративном портале
+                                            </span>
+                                            .
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class='card__welcome-section_2_0'>
+                                <div class='image__welcome-section_2_0'>
+                                    <img src="./this/img/sections/2/0/1c.svg"/>
+                                </div>
+                                <div class='description__welcome-section_2_0'>
+                                    <h4>
+                                        1С:Документооборот
+                                    </h4>
+                                    <div class="paragraph__welcome-section_2_0">
+                                        <p class="paragraph--left">
+                                            В компании внедрена Система внутреннего документооборота на базе 1С:Документооборот. Регламенты на бизнес-процессы, инструкции пользователей по работе с функционалом системы опубликованы на
+                                            <span class="link">
+                                                корпоративном портале
+                                            </span>
+                                            .
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class='card__welcome-section_2_0'>
+                                <div class='image__welcome-section_2_0'>
+                                    <img src="./this/img/sections/2/0/1c.svg"/>
+                                </div>
+                                <div class='description__welcome-section_2_0'>
+                                    <h4>
+                                        1С:Документооборот
+                                    </h4>
+                                    <div class="paragraph__welcome-section_2_0">
+                                        <p class="paragraph--left">
+                                            В компании внедрена Система внутреннего документооборота на базе 1С:Документооборот. Регламенты на бизнес-процессы, инструкции пользователей по работе с функционалом системы опубликованы на
+                                            <span class="link">
+                                                корпоративном портале
+                                            </span>
+                                            .
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class='section_content_item_img_2_0'></div>
@@ -929,9 +1003,86 @@
                     <p class='section_content_header_p_right'></p>
                 </div>
                 <div class='section_content_body'>
-                    <p class='section_content_body_p  notFound has-animation'>
-                        РАЗДЕЛ в разработке
-                    </p>
+                    <div class='section_content_body--center--padding_0'>
+                        <div class='content__welcome-section_2_0'>
+                            <div class='card__welcome-section_2_0'>
+                                <div class='image__welcome-section_2_0'>
+                                    <img src="./this/img/sections/2/0/1c.svg"/>
+                                </div>
+                                <div class='description__welcome-section_2_0'>
+                                    <h4>
+                                        1С:Документооборот
+                                    </h4>
+                                    <div class="paragraph__welcome-section_2_0">
+                                        <p class="paragraph--left">
+                                            В компании внедрена Система внутреннего документооборота на базе 1С:Документооборот. Регламенты на бизнес-процессы, инструкции пользователей по работе с функционалом системы опубликованы на
+                                            <span class="link">
+                                                корпоративном портале
+                                            </span>
+                                            .
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class='card__welcome-section_2_0'>
+                                <div class='image__welcome-section_2_0'>
+                                    <img src="./this/img/sections/2/0/1c.svg"/>
+                                </div>
+                                <div class='description__welcome-section_2_0'>
+                                    <h4>
+                                        1С:Документооборот
+                                    </h4>
+                                    <div class="paragraph__welcome-section_2_0">
+                                        <p class="paragraph--left">
+                                            В компании внедрена Система внутреннего документооборота на базе 1С:Документооборот. Регламенты на бизнес-процессы, инструкции пользователей по работе с функционалом системы опубликованы на
+                                            <span class="link">
+                                                корпоративном портале
+                                            </span>
+                                            .
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class='card__welcome-section_2_0'>
+                                <div class='image__welcome-section_2_0'>
+                                    <img src="./this/img/sections/2/0/1c.svg"/>
+                                </div>
+                                <div class='description__welcome-section_2_0'>
+                                    <h4>
+                                        1С:Документооборот
+                                    </h4>
+                                    <div class="paragraph__welcome-section_2_0">
+                                        <p class="paragraph--left">
+                                            В компании внедрена Система внутреннего документооборота на базе 1С:Документооборот. Регламенты на бизнес-процессы, инструкции пользователей по работе с функционалом системы опубликованы на
+                                            <span class="link">
+                                                корпоративном портале
+                                            </span>
+                                            .
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class='card__welcome-section_2_0'>
+                                <div class='image__welcome-section_2_0'>
+                                    <img src="./this/img/sections/2/0/1c.svg"/>
+                                </div>
+                                <div class='description__welcome-section_2_0'>
+                                    <h4>
+                                        1С:Документооборот
+                                    </h4>
+                                    <div class="paragraph__welcome-section_2_0">
+                                        <p class="paragraph--left">
+                                            В компании внедрена Система внутреннего документооборота на базе 1С:Документооборот. Регламенты на бизнес-процессы, инструкции пользователей по работе с функционалом системы опубликованы на
+                                            <span class="link">
+                                                корпоративном портале
+                                            </span>
+                                            .
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class='section_content_item_img_3_0'></div>
