--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -879,56 +879,57 @@
                             </div>
                             <div class='card__welcome-section_2_0'>
                                 <div class='image__welcome-section_2_0'>
-                                    <img src="./this/img/sections/2/0/1c.svg"/>
+                                    <img src="./this/img/sections/2/0/mail.svg"/>
                                 </div>
                                 <div class='description__welcome-section_2_0'>
                                     <h4>
-                                        1С:Документооборот
+                                        почта
                                     </h4>
                                     <div class="paragraph__welcome-section_2_0">
                                         <p class="paragraph--left">
-                                            В компании внедрена Система внутреннего документооборота на базе 1С:Документооборот. Регламенты на бизнес-процессы, инструкции пользователей по работе с функционалом системы опубликованы на
-                                            <span class="link">
-                                                корпоративном портале
-                                            </span>
-                                            .
+                                            В компании корпоративная почта является одним из важнейших инструментов внутренней коммуникации. С ее помощью мы общаемся с коллегами и партнерам, получаем важные рассылки и организовываем встречи. Не пропусти важные рассылки! 😉
                                         </p>
                                     </div>
                                 </div>
                             </div>
                             <div class='card__welcome-section_2_0'>
                                 <div class='image__welcome-section_2_0'>
-                                    <img src="./this/img/sections/2/0/1c.svg"/>
+                                    <img src="./this/img/sections/2/0/handshake.svg"/>
                                 </div>
+
                                 <div class='description__welcome-section_2_0'>
                                     <h4>
-                                        1С:Документооборот
+                                        обращение к коллегам
                                     </h4>
                                     <div class="paragraph__welcome-section_2_0">
                                         <p class="paragraph--left">
-                                            В компании внедрена Система внутреннего документооборота на базе 1С:Документооборот. Регламенты на бизнес-процессы, инструкции пользователей по работе с функционалом системы опубликованы на
-                                            <span class="link">
-                                                корпоративном портале
-                                            </span>
-                                            .
+                                            Не нужно стесняться спрашивать и обращаться за помощью к коллегам. Большая часть сотрудников обращается друг к другу
+                                            <span class="link"> по имени и на "ты"</span>
+                                            , а к руководителям -
+                                            <span class="link"> и на "вы", и на "ты"</span>.
+                                            Лучший способ что-то выяснить – подойти и поговорить. Мы уважительно относимся друг к другу, поэтому разговариваем вежливо.  Не требуем, не приказываем (в том числе и подчиненным), а просим, рекомендуем и предлагаем. В кабинетах и openspace – мы разговариваем не громко и стараемся не мешать коллегам.
                                         </p>
                                     </div>
                                 </div>
                             </div>
                             <div class='card__welcome-section_2_0'>
                                 <div class='image__welcome-section_2_0'>
-                                    <img src="./this/img/sections/2/0/1c.svg"/>
+                                    <img src="./this/img/sections/2/0/Teacher.svg"/>
                                 </div>
+
+
+                                   .
                                 <div class='description__welcome-section_2_0'>
                                     <h4>
-                                        1С:Документооборот
+                                        переговорные комнаты
                                     </h4>
                                     <div class="paragraph__welcome-section_2_0">
                                         <p class="paragraph--left">
-                                            В компании внедрена Система внутреннего документооборота на базе 1С:Документооборот. Регламенты на бизнес-процессы, инструкции пользователей по работе с функционалом системы опубликованы на
-                                            <span class="link">
-                                                корпоративном портале
-                                            </span>
+                                            Для проведения встреч ты можешь воспользоваться Переговорной №1 Основная (мы ее называем «большая» или «с гербом»).
+                                            Если встречу с коллегами необходимо провести онлайн,
+                                            то организовать ее нужно в нашей системе видеоконференций
+                                            по ссылке:
+                                            <a class="link paragraph" href="https://vks.digitalms.ru"> https://vks.digitalms.ru </a>
                                             .
                                         </p>
                                     </div>
@@ -1007,17 +1008,17 @@
                         <div class='content__welcome-section_2_0'>
                             <div class='card__welcome-section_2_0'>
                                 <div class='image__welcome-section_2_0'>
-                                    <img src="./this/img/sections/2/0/1c.svg"/>
+                                    <img src="./this/img/sections/3/0/note.svg"/>
                                 </div>
                                 <div class='description__welcome-section_2_0'>
                                     <h4>
-                                        1С:Документооборот
+                                        корпоративный стиль
                                     </h4>
                                     <div class="paragraph__welcome-section_2_0">
                                         <p class="paragraph--left">
-                                            В компании внедрена Система внутреннего документооборота на базе 1С:Документооборот. Регламенты на бизнес-процессы, инструкции пользователей по работе с функционалом системы опубликованы на
+                                            В компании есть официальный логотип, бланки для документов, реквизиты компании.
                                             <span class="link">
-                                                корпоративном портале
+                                                Документы доступны для скачивания только пользователям домена
                                             </span>
                                             .
                                         </p>
@@ -1026,18 +1027,33 @@
                             </div>
                             <div class='card__welcome-section_2_0'>
                                 <div class='image__welcome-section_2_0'>
-                                    <img src="./this/img/sections/2/0/1c.svg"/>
+                                    <img src="./this/img/sections/3/0/paperclip.svg"/>
                                 </div>
                                 <div class='description__welcome-section_2_0'>
                                     <h4>
-                                        1С:Документооборот
+                                        канцелярия
                                     </h4>
                                     <div class="paragraph__welcome-section_2_0">
                                         <p class="paragraph--left">
-                                            В компании внедрена Система внутреннего документооборота на базе 1С:Документооборот. Регламенты на бизнес-процессы, инструкции пользователей по работе с функционалом системы опубликованы на
-                                            <span class="link">
-                                                корпоративном портале
-                                            </span>
+                                            Если тебе необходимо получить канцелярию, например лотки для документов, или нужно докупить настольную лампу, обратись в административно-хозяйственный отдел. Почта:
+                                            <a class="link paragraph" href="mailto:admin@digitalms.ru">admin@digitalms.ru</a>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class='card__welcome-section_2_0'>
+                                <div class='image__welcome-section_2_0'>
+                                    <img src="./this/img/sections/3/0/printer.svg"/>
+                                </div>
+
+                                <div class='description__welcome-section_2_0'>
+                                    <h4>
+                                        принтер
+                                    </h4>
+                                    <div class="paragraph__welcome-section_2_0">
+                                        <p class="paragraph--left">
+                                            По умолчанию к рабочему месту нового сотрудника подключено ближайшее МФУ. Для подключения к другим принтерам необходимо обратиться в техническую поддержку
+                                            <a class="link paragraph" href="mailto:help@digitalms.ru">help@digitalms.ru</a>
                                             .
                                         </p>
                                     </div>
@@ -1045,38 +1061,17 @@
                             </div>
                             <div class='card__welcome-section_2_0'>
                                 <div class='image__welcome-section_2_0'>
-                                    <img src="./this/img/sections/2/0/1c.svg"/>
+                                    <img src="./this/img/sections/3/0/technical.svg"/>
                                 </div>
                                 <div class='description__welcome-section_2_0'>
                                     <h4>
-                                        1С:Документооборот
+                                        Тех. поддержка
                                     </h4>
                                     <div class="paragraph__welcome-section_2_0">
                                         <p class="paragraph--left">
-                                            В компании внедрена Система внутреннего документооборота на базе 1С:Документооборот. Регламенты на бизнес-процессы, инструкции пользователей по работе с функционалом системы опубликованы на
-                                            <span class="link">
-                                                корпоративном портале
-                                            </span>
-                                            .
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class='card__welcome-section_2_0'>
-                                <div class='image__welcome-section_2_0'>
-                                    <img src="./this/img/sections/2/0/1c.svg"/>
-                                </div>
-                                <div class='description__welcome-section_2_0'>
-                                    <h4>
-                                        1С:Документооборот
-                                    </h4>
-                                    <div class="paragraph__welcome-section_2_0">
-                                        <p class="paragraph--left">
-                                            В компании внедрена Система внутреннего документооборота на базе 1С:Документооборот. Регламенты на бизнес-процессы, инструкции пользователей по работе с функционалом системы опубликованы на
-                                            <span class="link">
-                                                корпоративном портале
-                                            </span>
-                                            .
+                                            Если тебе необходимо установить дополнительное ПО, запросить технику или возникли технические трудности, пиши на
+                                            <a class="link paragraph" href="mailto:help@digitalms.ru">help@digitalms.ru</a>
+                                            . Коллеги постараются оперативно решить вопрос для продолжения комфортной работы.
                                         </p>
                                     </div>
                                 </div>
