--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -476,7 +476,7 @@
                     <p class='section_content_header_p_right'></p>
                 </div>
                 <div class='section_content_body'>
-                    <p class='paragraph has-animation'>
+                    <p class='paragraph has-animation--margin-top_44'>
                         Компания была образована в 2019 году как центр компетенций цифрового здравоохранения. Сегодня Цифромед является головной компанией
                         <span class="bold">Кластера «Медицина»</span>
                         ПАО Ростелеком.
@@ -530,18 +530,19 @@
                             </p>
                         </div>
                     </div>
-                    <p class='paragraph-24 has-animation'>
+                    <p class='paragraph-24 has-animation--margin-top_34'>
                         Подробно со структурой компании и топ-менеджерами ты можешь познакомиться на
                         <span class="link">корпоративном портале</span>
                         .
                     </p>
 
-                    <p class='paragraph-30 bold has-animation'>
+                    <p class='paragraph-30 bold has-animation--margin-top_34'>
                         Также в структуре Кластера есть несколько продуктовых компаний
-                        <p class="paragraph-22">(мы их называем ДЗО – дочернее зависимое общество)</p>
                         .
                     </p>
-                    <div class="footer__welcome-section_1_0">
+                    <p class="paragraph-22">(мы их называем ДЗО – дочернее зависимое общество)</p>
+
+                    <div class="footer__welcome-section_1_0--margin-top_53">
                         <div class="item_footer__welcome-section_1_0">
                             <img  src="./this/img/sections/1/0/rtk_radiology.svg"/>
                         </div>
