--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -689,10 +689,10 @@
                                 <img src="./this/img/sections/1/1/01.svg"/>
                             </div>
                             <div class='section_content_card_bottom_03'>
-                                <h4>
+                                <h4 class="description__welcome-section_2_0--text-align--margin-bottom_27">
                                     Честность
                                 </h4>
-                                <p>
+                                <p class="paragraph--left--font-size_24">
                                     Мы честны по отношению к себе и другим. Не боимся признавать свои ошибки и делиться
                                     информацией.
                                 </p>
@@ -704,10 +704,10 @@
                                 <img src="./this/img/sections/1/1/02.svg"/>
                             </div>
                             <div class='section_content_card_bottom_03'>
-                                <h4>
+                                <h4 class="description__welcome-section_2_0--text-align--margin-bottom_27">
                                     Эффективность
                                 </h4>
-                                <p>
+                                <p class="paragraph--left--font-size_24">
                                     Мы постоянно развиваемся, ориентируемся на результат и предлагаем свои идеи и
                                     решения.
                                 </p>
@@ -719,10 +719,10 @@
                                 <img src="./this/img/sections/1/1/03.svg"/>
                             </div>
                             <div class='section_content_card_bottom_03'>
-                                <h4>
+                                <h4 class="description__welcome-section_2_0--text-align--margin-bottom_27">
                                     Сотрудничество
                                 </h4>
-                                <p>
+                                <p class="paragraph--left--font-size_24">
                                     Сотрудничайте с коллегами и помогайте им для достижения поставленных целей.
                                 </p>
                             </div>
@@ -733,10 +733,10 @@
                                 <img src="./this/img/sections/1/1/04.svg"/>
                             </div>
                             <div class='section_content_card_bottom_03'>
-                                <h4>
+                                <h4 class="description__welcome-section_2_0--text-align--margin-bottom_27">
                                     Профессионализм
                                 </h4>
-                                <p>
+                                <p class="paragraph--left--font-size_24">
                                     Мы выполняем свою работу от начала и до конца. Стремимся не говорить «нельзя», а
                                     искать варианты «как».
                                 </p>
@@ -758,15 +758,90 @@
     >
         <div class='section_content'>
             <div class='hasAnimation section_content_item_0'>
-                <div class='section_content_header'>
+                <div class='section_content_header--gray'>
                     <p class='section_content_header_p_left'></p>
                     <p class='section_content_header_p'>график работы</p>
                     <p class='section_content_header_p_right'></p>
                 </div>
-                <div class='section_content_body'>
-                    <p class='section_content_body_p  notFound has-animation'>
-                        РАЗДЕЛ в разработке
-                    </p>
+                <div class='section_content_body--gray--gap_100--center--flex-direction_row--justify-content_space-between--align-items_center--padding-top_7v'>
+                    <div class="cotainer__welcome-section_1_4--gap_52--align-self_baseline">
+                        <div class="cotainer__welcome-section_2_2">
+                            <div class="card__welcome-section_2_2--flex-direction_column">
+                                <div class='image__welcome-section_2_2--square_77--margin-bottom_8'>
+                                    <img src="./this/img/sections/1/4/network-connection 1.svg"/>
+                                </div>
+                                <p class='paragraph--left--width_402--font-size_24'>
+                                    У нас
+                                    <span class="bold">
+                                гибридный формат работы
+                            </span>
+                                    ,это означает, что в определенные дни недели ты можешь работать вне офиса, соблюдая при этом установленный рабочий график.
+                                </p>
+                            </div>
+
+                            <div class="card__welcome-section_2_2--flex-direction_column">
+                                <div class='image__welcome-section_2_2--square_77--margin-bottom_8'>
+                                    <img src="./this/img/sections/1/4/clock-svgrepo-com 1.svg"/>
+                                </div>
+                                <p class='paragraph--left--width_402--font-size_24'>
+                                    Обычно рабочий день длится
+                                    <span class="bold">
+                                        с 10:00 до 19:00
+                                    </span>
+                                    , но по согласованию со своим руководителем ты можешь начинать рабочий день в ином временном интервале.
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class="cotainer__welcome-section_2_2">
+                            <div class="card__welcome-section_2_2--width_100--background_gray--flex-direction_column--border-radius_21--padding_44_73--gap_34">
+                                <div class="wrapper-example__welcome-section_1_4">
+                                    <div class='image__welcome-section_2_0--square_150--margin-left_0'>
+                                        <img src="./this/img/sections/1/4/speech-bubble 1.svg"/>
+                                    </div>
+                                    <p class="paragraph--text-align--align-self_center">
+                                        <span class="link">
+                                            Я сильно опаздываю, т.к. попал в пробку, переводил бабушку через дорогу… Что мне делать?
+                                        </span>
+                                    </p>
+                                </div>
+
+                                <p class="paragraph--text-align--font-size_24">
+                                    Позвони своему руководителю и предупреди о происшествии. Если тебе необходимо отлучиться на некоторое время в течение рабочего дня или уйти до официального окончания рабочего дня, обязательно получи на это согласие непосредственного Руководителя.
+                                </p>
+                            </div>
+                        </div>
+
+                    </div>
+
+
+
+                    <div class="card__welcome-section_2_2--flex-direction_column--align-self_baseline">
+                        <div class='image__welcome-section_2_2--square_77--margin-bottom_8'>
+                            <img src="./this/img/sections/1/4/lunch-svgrepo-com 1.svg"/>
+                        </div>
+                        <div class="wrapper-description__welcome-section_1_4--width_597">
+                            <p class='paragraph--left--width_500--font-size_24'>
+                                <span class="bold--display_block">На обед отводится 1 час</span>
+                                Желательно успеть пообедать в периодс
+                                <span class="link"> 12:00 до 15:00</span>.
+                            </p>
+                            <p class='paragraph--left--width_100p--font-size_24'>
+                                Если ты привык к домашней кухне, в нашем офисе оборудованы кухни с холодильником, микроволновкой и кофе-машиной, которыми всегда можно воспользоваться.
+                            </p>
+                            <p class='paragraph--left--width_100p--font-size_24'>
+                                Если ты вдруг забыл свой обед дома, то не переживай! В офисе стоит вендинговый автомат «Милти»,  в котором ты всегда можешь  купить еду!
+                            </p>
+                            <p class='paragraph--left--width_100p--font-size_24'>
+                                На 11 этаже башни есть столовая. В нее можно попасть по своему пропуску с 09:00 до 16:00.
+                            </p>
+                            <p class='paragraph--left--width_100p--font-size_24'>
+                                О других кафе и ресторанах в башне ты можешь узнать
+                                <span class="link">тут.</span>
+                            </p>
+                        </div>
+                    </div>
+
                 </div>
             </div>
             <div class='section_content_item_img_1_4'></div>
