--- a/template/system/index.html
+++ b/template/system/index.html
@@ -19,7 +19,7 @@
                             <slot name="header_property"></slot>
                         </div>
                     </div>
-                    <div slot ="grid__body" class="grid__body">
+                    <div slot ="grid__body" class="grid__body--margin-top_0">
                         <div id="relation">
                             <slot name="body_relation"></slot>
                         </div>
