--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -248,7 +248,7 @@
                     <div class="content">
                         <p class="description-title">Привет!</p>
                         <p class="description-title">Мы рады приветствовать тебя в команде</p>
-                        <h1 class="margin--bottom">Цифромед</h1>
+                        <h1 class="margin--bottom--font-size_5.1rem">Цифромед</h1>
                         <div class="description-content">
                             <p class="description-text bold margin--bottom">
                                 Приветствуем тебя в команде Цифромед!
